--- a/Python/example1/readme.ipynb
+++ b/Python/example1/readme.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "# Example1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instalar requerimientos\n",
+    "\n",
+    "    $ pip install -r requirements.txt"
+   ]
   }
  ],
  "metadata": {
