--- a/Python/example1/readme.ipynb
+++ b/Python/example1/readme.ipynb
@@ -11,6 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Correr entonrno virtual\n",
+    "\n",
+    "    $ pip install virtualenv\n",
+    "    $ virtualenv -p python3 env3\n",
+    "    $ source env3/bin/activate\n",
+    "\n",
     "Instalar requerimientos\n",
     "\n",
     "    $ pip install -r requirements.txt"
