--- a/Python/example2/readme.ipynb
+++ b/Python/example2/readme.ipynb
@@ -8,13 +8,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "- https://flask.palletsprojects.com/en/1.1.x\n",
+    "    - https://flask.palletsprojects.com/en/1.1.x/quickstart/"
+   ]
   }
  ],
  "metadata": {
