--- a/Python/example5/test.ipynb
+++ b/Python/example5/test.ipynb
@@ -85,6 +85,135 @@
     "    g[x] = list(set(g[x]))\n",
     "#     print(1,x,g[x])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# id\n",
+    "drawId = {}\n",
+    "drawXY = {}\n",
+    "i = 50\n",
+    "for x in g:\n",
+    "    drawId[x] = i\n",
+    "    drawXY[x] = {\"x\":0,\"y\":0}\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getNodo(nodo,x,y):\n",
+    "    ans = f\"\"\"\n",
+    "                <mxCell id=\"{drawId[nodo]}\" value=\"{nodo}\" style=\"ellipse;whiteSpace=wrap;html=1;\" parent=\"1\" vertex=\"1\"> \n",
+    "                        <mxGeometry x=\"{int(x)}\" y=\"{int(y)}\" width=\"120\" height=\"80\" as=\"geometry\"/>\n",
+    "                </mxCell>        \n",
+    "                    \"\"\"\n",
+    "    return ans\n",
+    "\n",
+    "# def getArista(padre,hijo,idArista):\n",
+    "#     return f\"\"\"\n",
+    "#                 <mxCell id=\"{idArista}\" style=\"edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;\" parent=\"1\" source=\"{drawId[padre]}\" target=\"{drawId[hijo]}\" edge=\"1\">\n",
+    "#                     <mxGeometry relative=\"1\" as=\"geometry\"/>\n",
+    "#                 </mxCell>\"\"\"\n",
+    "\n",
+    "def getArista(padre,hijo,idArista):\n",
+    "    return f\"\"\"\n",
+    "                <mxCell id=\"{idArista}\" style=\"edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;\" parent=\"1\" source=\"{drawId[padre]}\" target=\"{drawId[hijo]}\" edge=\"1\">\n",
+    "                    <mxGeometry relative=\"1\" as=\"geometry\"/>\n",
+    "                </mxCell>\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = max(drawId)\n",
+    "# print(t,drawId[t]) #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# drawId\n",
+    "import os\n",
+    "\n",
+    "def bfs(grafo,inicio,x,y):\n",
+    "    padre = os.path.realpath(inicio)\n",
+    "    visitado = {}\n",
+    "    procesado = {}\n",
+    "    visitado[padre] = 1\n",
+    "    procesado[padre] = 1\n",
+    "#     drawIdUltimo = drawId[max(drawId)]+10\n",
+    "    drawIdUltimo = 0\n",
+    "    for value in drawId:\n",
+    "        if drawId[value] > drawIdUltimo:\n",
+    "            drawIdUltimo = drawId[value]\n",
+    "#             print(type(drawIdUltimo),drawIdUltimo)\n",
+    "    drawIdUltimo += 1\n",
+    "#     print(type(drawIdUltimo),drawIdUltimo)\n",
+    "    drawXY[padre] = {\"x\":0,\"y\":0}\n",
+    "    print(getNodo(padre,drawXY[padre][\"x\"],drawXY[padre][\"y\"]))\n",
+    "    while len(procesado) > 0:\n",
+    "        padre = list(procesado.keys())[0]\n",
+    "        procesado.pop(padre)\n",
+    "        i = 0\n",
+    "        for hijo in grafo[padre]:\n",
+    "            print(getArista(padre,hijo,drawIdUltimo))\n",
+    "            drawIdUltimo += 1\n",
+    "            if not hijo in visitado:\n",
+    "                visitado[hijo] = 1\n",
+    "                procesado[hijo] = 1\n",
+    "#                 print(1,padre, grafo[padre])\n",
+    "#                 print(11,hijo, grafo[hijo])\n",
+    "#                 print(2,type(i-len(grafo[padre])),i-len(grafo[padre]))\n",
+    "#                 print(22,type(x),x)\n",
+    "#                 print(3,type(drawXY[padre][\"x\"]),drawXY[padre][\"x\"])\n",
+    "                drawXY[hijo] = {\n",
+    "#                     \"x\" : int(drawXY[padre][\"x\"]+(i-len(grafo[padre])/2)*x),\n",
+    "                    \"x\" : int(drawXY[padre][\"x\"]+(i-len(grafo[padre])/2)*x),\n",
+    "                    \"y\" : int(drawXY[padre][\"y\"]+y)\n",
+    "                }\n",
+    "#                 print(type(drawXY[hijo]),drawXY)\n",
+    "                print(getNodo(hijo,drawXY[hijo][\"x\"],drawXY[hijo][\"y\"]))\n",
+    "            i += 1\n",
+    "    return True\n",
+    "\n",
+    "# generar vertices\n",
+    "# for v in drawId:\n",
+    "#     print(getNodo(v))\n",
+    "ans = bfs(g,'./app/index.js',120*2,120*2)\n",
+    "# print(ans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se copia y se agrega a la base .drawio "
+   ]
   }
  ],
  "metadata": {
